Update heading and modify laughter text in index.htmlcambios

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 
     <div class="card">
         <div class="money">💰💰💰</div>
-        <h1>¡Tengo algo que decirte!</h1>
+        <h1>¡asi suena ARTS!</h1>
         <p>Escucha con atención… esto es muy importante 👀</p>
 
         <iframe width="110" height="200" src="https://www.myinstants.com/instant/money-money-money-money/embed/" frameborder="0" scrolling="no"></iframe>
 
-        <p>JAJAJAJA 😂</p>
+        <p>😂</p>
     </div>
 
     <footer>
